Dando início ao projeto

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Sunnyside agency landing page</title>
+  <link rel="stylesheet" href="style.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -15,12 +16,21 @@
   </style>
 </head>
 <body>
-  About
+  <header>
+    <h1>WE ARE CREATIVES</h1>
+  </header>
+  <main>
+
+    <section>
+
+    </section>
+  </main>
+  <!--About
   Services
   Projects
-  Contact
+  Contact-->
 
-  We are creatives
+  <!--We are creatives
 
   Transform your brand
 
@@ -58,11 +68,12 @@
   About
   Services
   Projects
-  Contact
+  Contact-->
 
-  <div class="attribution">
+    <!--<div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+   
+  </div>-->
 </body>
 </html>
