Adicionando mais conteúdo ao topo do site

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   
   <title>Frontend Mentor | Sunnyside agency landing page</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -17,7 +18,17 @@
 </head>
 <body>
   <header>
+    <div id="menu">
+      <div><img src="images/logo.svg" alt="Logo" id="logo-sunny"></div>
+
+      <div><span class="material-symbols-outlined" id="icon-burguer">
+        menu
+        </span>
+      </div>
+    </div>
+
     <h1>WE ARE CREATIVES</h1>
+    <img src="images/icon-arrow-down.svg" alt="Seta" id="seta">
   </header>
   <main>
 
@@ -30,7 +41,7 @@
   Projects
   Contact-->
 
-  <!--We are creatives
+  <!--
 
   Transform your brand
 
