Adicionando rodapé e algumas imagens

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
     <div id="menu">
       <div><img src="images/logo.svg" alt="Logo" id="logo-sunny"></div>
 
-      <div><span class="material-symbols-outlined" id="icon-burguer">
-        menu
-        </span>
+      <div><img src="images/icon-hamburger.svg" alt="" id="icon-burguer">
       </div>
     </div>
 
@@ -90,15 +88,45 @@
         <img src="images/image-jennie.jpg" alt="" class="fotos-clientes foto-2-3">   
         <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
         <p class="nomes">Jennie F.</p>
-        <p id="business">Business Owner</p>
+        <p>Business Owner</p>
       </section>
+    </article>
+
+    <article id="article-4-imagens">
+      <section id="milk">
+        <!--Background Image-->                       
+      </section>
+      <section id="orange">
+        <!--Background Image-->
+      </section>
+      <section id="sorvete">
+        <!--Background Image-->
+      </section>
+      <section id="sugar">
+        <!--Background Image-->
+      </section>
+    </article>
+
+    <article id="footer">
+      <img src="images/logo.svg" alt="logo sunny" id="logo-sunny-footer">
+      <div id="footer-servicos">
+        <p>About</p>
+        <p>Services</p>
+        <p>Projects</p>
+      </div>
+      <div id="footer-redes">
+        <img src="images/icon-facebook.svg" alt="logo facebook">
+        <img src="images/icon-instagram.svg" alt="logo instagram">
+        <img src="images/icon-twitter.svg" alt="logo twitter">
+        <img src="images/icon-pinterest.svg" alt="logo pinterest">
+      </div>
     </article>
 
   </main>
 
-  <!--About
-  Services
-  Projects
+  <!--
+  
+  
   Contact-->
 
   <!--
