--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </style>
 </head>
 <body>
+
   <header>
     <div id="menu">
       <div><img src="images/logo.svg" alt="Logo" id="logo-sunny"></div>
@@ -27,7 +28,17 @@
 
     <h1>WE ARE CREATIVES</h1>
     <div  id="seta"><img src="images/icon-arrow-down.svg" alt="Seta"></div>
+
+    <div id="navigation">
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
   </header>
+
   <main>
 
     <div>
@@ -40,7 +51,9 @@
           <p>We are a full-service creative agency specializing in helping brands grow fast.
             Engage your clients through compelling visuals that do most of the marketing for you.</p>
         </div>
-        <p>LEARN MORE</p>
+        <div id="div-learn-more-1">
+          <p id="learn-more-1">LEARN MORE</p>
+        </div>
       </section>
       <section id="taca">
         <!--Background Image-->
@@ -51,7 +64,9 @@
         <div class="div-conteudo">
           <p> Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
         </div>
-        <p>LEARN MORE</p>
+        <div id="div-learn-more-2">
+          <p id="learn-more-2">LEARN MORE</p>
+        </div>
       </section>
       
       <section id="cereja">
@@ -74,21 +89,21 @@
         <img src="images/image-emily.jpg" alt="" class="fotos-clientes">  
         <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
         <p class="nomes">Emily R.</p>
-        <p>Marketing Director</p>
+        <p class="profissoes">Marketing Director</p>
       </section>
 
       <section class="testemunhas">
         <img src="images/image-thomas.jpg" alt="" class="fotos-clientes">
         <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
         <p class="nomes">Thomas S.</p>
-        <p>Chief Operating Officer</p>
+        <p class="profissoes">Chief Operating Officer</p>
       </section>
 
       <section class="testemunhas">
         <img src="images/image-jennie.jpg" alt="" class="fotos-clientes foto-2-3">   
         <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
         <p class="nomes">Jennie F.</p>
-        <p>Business Owner</p>
+        <p class="profissoes">Business Owner</p>
       </section>
     </article>
 
