Adicionando mais estilo a navegação

--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
     <div id="menu">
       <div><img src="images/logo.svg" alt="Logo" id="logo-sunny"></div>
 
-      <div><img src="images/icon-hamburger.svg" alt="" id="icon-burguer">
+      <div><img src="images/icon-hamburger.svg" alt="Burguer menu" id="icon-burguer" onclick="menuAbrir()">
       </div>
     </div>
 
     <h1>WE ARE CREATIVES</h1>
     <div  id="seta"><img src="images/icon-arrow-down.svg" alt="Seta"></div>
 
-    <div id="navigation">
+    <nav id="navigation">
       <ul>
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Projects</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
-    </div>
+    </nav>
   </header>
 
   <main>
@@ -139,35 +139,7 @@
 
   </main>
 
-  <!--
-  
-  
-  Contact-->
-
-  <!--
-
-  
- 
-
-
- 
-
-
-  
-
-  
-
-
-  
-
-  
-  
-  
-
-  About
-  Services
-  Projects
-  Contact-->
+  <script src="script.js"></script>
 
     <!--<div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
