Terminando projeto adaptado para desktop

--- a/index.html
+++ b/index.html
@@ -59,13 +59,15 @@
           <!--Background Image-->
       </section>
       <section class="conteudo" id="conteudo-1">
-        <h2 class="titulo-conteudo"> Transform your <br> brand</h2>
-        <div class="div-conteudo">
-          <p>We are a full-service creative agency specializing in helping brands grow fast.
-            Engage your clients through compelling visuals that do most of the marketing for you.</p>
+        <div class="conteudo-desk">
+          <h2 class="titulo-conteudo"> Transform your <br> brand</h2>
+          <div class="div-conteudo">
+            <p>We are a full-service creative agency specializing in helping brands grow fast.
+              Engage your clients through compelling visuals that do most of the marketing for you.</p>
+          </div>
         </div>
         <div id="div-learn-more-1">
-          <p id="learn-more-1">LEARN MORE</p>
+          <a href="#" id="learn-more-1">LEARN MORE</a>
         </div>
       </section>
       <section id="taca">
@@ -73,12 +75,14 @@
       </section>
       
       <section class="conteudo" id="conteudo-2">
-        <h2 class="titulo-conteudo">Stand out to the <br> right audience</h2>
-        <div class="div-conteudo">
-          <p> Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
+        <div class="conteudo-desk">
+          <h2 class="titulo-conteudo">Stand out to the <br> right audience</h2>
+          <div class="div-conteudo">
+            <p> Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
+          </div>
         </div>
         <div id="div-learn-more-2">
-          <p id="learn-more-2">LEARN MORE</p>
+          <a href="#" id="learn-more-2">LEARN MORE</a>
         </div>
       </section>
       
@@ -98,26 +102,26 @@
         CLIENT TESTIMONIALS
       </h4>
 
-      <section class="testemunhas">
-        <img src="images/image-emily.jpg" alt="" class="fotos-clientes">  
-        <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
-        <p class="nomes">Emily R.</p>
-        <p class="profissoes">Marketing Director</p>
-      </section>
-
-      <section class="testemunhas">
-        <img src="images/image-thomas.jpg" alt="" class="fotos-clientes">
-        <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
-        <p class="nomes">Thomas S.</p>
-        <p class="profissoes">Chief Operating Officer</p>
-      </section>
-
-      <section class="testemunhas">
-        <img src="images/image-jennie.jpg" alt="" class="fotos-clientes foto-2-3">   
-        <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
-        <p class="nomes">Jennie F.</p>
-        <p class="profissoes">Business Owner</p>
-      </section>
+      <div id="div-testemunhas">
+        <section class="testemunhas">
+          <img src="images/image-emily.jpg" alt="" class="fotos-clientes">
+          <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+          <p class="nomes">Emily R.</p>
+          <p class="profissoes">Marketing Director</p>
+        </section>
+        <section class="testemunhas">
+          <img src="images/image-thomas.jpg" alt="" class="fotos-clientes">
+          <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+          <p class="nomes">Thomas S.</p>
+          <p class="profissoes">Chief Operating Officer</p>
+        </section>
+        <section class="testemunhas">
+          <img src="images/image-jennie.jpg" alt="" class="fotos-clientes foto-2-3">
+          <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+          <p class="nomes">Jennie F.</p>
+          <p class="profissoes">Business Owner</p>
+        </section>
+      </div>
     </article>
 
     <article id="article-4-imagens">
@@ -138,15 +142,15 @@
     <article id="footer">
       <img src="images/logo.svg" alt="logo sunny" id="logo-sunny-footer">
       <div id="footer-servicos">
-        <p>About</p>
-        <p>Services</p>
-        <p>Projects</p>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Projects</a>
       </div>
       <div id="footer-redes">
-        <img src="images/icon-facebook.svg" alt="logo facebook">
-        <img src="images/icon-instagram.svg" alt="logo instagram">
-        <img src="images/icon-twitter.svg" alt="logo twitter">
-        <img src="images/icon-pinterest.svg" alt="logo pinterest">
+        <a href="#"><img src="images/icon-facebook.svg" alt="logo facebook"></a>
+        <a href="#"><img src="images/icon-instagram.svg" alt="logo instagram"></a>
+        <a href="#"><img src="images/icon-twitter.svg" alt="logo twitter"></a>
+        <a href="#"><img src="images/icon-pinterest.svg" alt="logo pinterest"></a>
       </div>
     </article>
 
