ajustando para desktop

--- a/index.html
+++ b/index.html
@@ -20,44 +20,42 @@
 </head>
 <body>
 
-  <header>
-    <div id="menu">
-      <div><img src="images/logo.svg" alt="Logo" id="logo-sunny"></div>
-
-      
-    <nav id="navigation">
-      <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-
-      <div><img src="images/icon-hamburger.svg" alt="Burguer menu" id="icon-burguer" onclick="menuAbrir()">
-      </div>
-    </div>
-
-    <h1>WE ARE CREATIVES</h1>
-    <div  id="seta"><img src="images/icon-arrow-down.svg" alt="Seta"></div>
-
-
-    <nav id="navigation-desk">
-      <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <div id="fundo-header">
+    <header>
+        <div id="menu">
+          <div><img src="images/logo.svg" alt="Logo" id="logo-sunny"></div>
+    
+        <nav id="navigation">
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+          <div><img src="images/icon-hamburger.svg" alt="Burguer menu" id="icon-burguer" onclick="menuAbrir()">
+          </div>
+        </div>
+        <h1>WE ARE CREATIVES</h1>
+        <div  id="seta"><img src="images/icon-arrow-down.svg" alt="Seta"></div>
+        <nav id="navigation-desk">
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+    </header>
+  </div>
 
   <main>
 
     <div id="abaixo-header">
-      <section id="section-egg">
-          <!--Background Image-->
-      </section>
+          <section id="section-egg">
+              <!--Background Image-->
+          </section>
+
       <section class="conteudo" id="conteudo-1">
         <div class="conteudo-desk">
           <h2 class="titulo-conteudo"> Transform your <br> brand</h2>
@@ -70,6 +68,7 @@
           <a href="#" id="learn-more-1">LEARN MORE</a>
         </div>
       </section>
+
       <section id="taca">
         <!--Background Image-->
       </section>
